<!--
  ~ Copyright (c) 2021 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<resources>
    <string name="action_run">Run</string>
    <string name="action_quit">Quit</string>
    <string name="action_save">Save</string>
    <string name="action_save_and_quit">Save &amp; quit</string>
    <string name="action_undo">Undo</string>

    <string name="error_title">Error</string>
    <string name="error_open">Failed to open file</string>
    <string name="error_read_generic">Failed to read \'%1$s\'</string>
    <string name="error_read_size">Failed to read \'%1$s\': the file is too big (%2$.2f / %3$.2f MB)</string>
    <string name="error_substitution">Invalid pattern</string>

    <string name="summary_loading">Loading…</string>
    <string name="summary_info">Ln %1$d, Col %2$d</string>

    <string name="title_generic">this text file</string>

    <string name="menu_new">New file</string>
    <string name="menu_open">Open file</string>
    <string name="menu_font_size">Text size</string>
    <string name="menu_font_size_small">Small</string>
    <string name="menu_font_size_medium">Medium</string>
    <string name="menu_font_size_large">Large</string>
    <string name="menu_font_style">Font style</string>
    <string name="menu_font_style_mono">Monospace</string>
    <string name="menu_font_style_sans">Sans serif</string>
    <string name="menu_font_style_serif">Serif</string>
    <string name="menu_eol">End of line</string>
    <string name="menu_eol_cr">Macintosh (CR)</string>
    <string name="menu_eol_crlf">Windows (CRLF)</string>
    <string name="menu_eol_lf">Unix (LF)</string>
    <string name="menu_option">Options</string>
    <string name="menu_option_auto_pair">Auto pair</string>
    <string name="menu_option_command_bar_show">Command field</string>
    <string name="menu_option_wrap_text">Wrap text</string>
    <string name="menu_option_shell_show">Show app icon</string>
    <string name="menu_help">Help</string>

    <string name="command_hint">Type a command…</string>
    <string name="command_unknown">Error: unknown or badly–formatted command</string>
    <string name="command_find_none">Find: no match</string>

    <string name="save_quit_ask">Quit without saving changes to %1$s?</string>
    <string name="save_in_progress">Saving \'%1$s\'…</string>
    <string name="save_success">Saved</string>
    <string name="save_failed">Failed to save \'%1$s\'</string>
</resources>
