<!--
  ~ Copyright (c) 2021 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_undo"
        android:alphabeticModifiers="CTRL"
        android:alphabeticShortcut="z"
        android:enabled="false"
        android:icon="@drawable/ic_action_undo"
        android:showAsAction="ifRoom"
        android:title="@string/action_undo" />

    <item
        android:id="@+id/menu_save"
        android:alphabeticModifiers="CTRL"
        android:alphabeticShortcut="s"
        android:enabled="false"
        android:icon="@drawable/ic_action_save"
        android:showAsAction="always"
        android:title="@string/action_save" />

    <item
        android:id="@+id/menu_new"
        android:alphabeticModifiers="CTRL"
        android:alphabeticShortcut="n"
        android:showAsAction="never"
        android:title="@string/menu_new" />

    <item
        android:id="@+id/menu_open"
        android:alphabeticModifiers="CTRL"
        android:alphabeticShortcut="o"
        android:showAsAction="never"
        android:title="@string/menu_open" />

    <item
        android:showAsAction="never"
        android:title="@string/menu_font_size">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_font_size_small"
                    android:title="@string/menu_font_size_small" />
                <item
                    android:id="@+id/menu_font_size_medium"
                    android:checked="true"
                    android:title="@string/menu_font_size_medium" />
                <item
                    android:id="@+id/menu_font_size_large"
                    android:title="@string/menu_font_size_large" />
            </group>
        </menu>
    </item>

    <item
        android:showAsAction="never"
        android:title="@string/menu_font_style">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_font_style_mono"
                    android:checked="true"
                    android:title="@string/menu_font_style_mono" />
                <item
                    android:id="@+id/menu_font_style_sans"
                    android:title="@string/menu_font_style_sans" />
                <item
                    android:id="@+id/menu_font_style_serif"
                    android:title="@string/menu_font_style_serif" />
            </group>
        </menu>
    </item>

    <item
        android:showAsAction="never"
        android:title="@string/menu_eol">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_eol_lf"
                    android:title="@string/menu_eol_lf" />
                <item
                    android:id="@+id/menu_eol_cr"
                    android:title="@string/menu_eol_cr" />
                <item
                    android:id="@+id/menu_eol_crlf"
                    android:title="@string/menu_eol_crlf" />
            </group>
        </menu>
    </item>

    <item
        android:showAsAction="never"
        android:title="@string/menu_option">
        <menu>
            <item
                android:id="@+id/menu_option_auto_pair"
                android:checkable="true"
                android:showAsAction="never"
                android:title="@string/menu_option_auto_pair" />

            <item
                android:id="@+id/menu_option_command_bar_show"
                android:alphabeticModifiers="CTRL"
                android:alphabeticShortcut="/"
                android:checkable="true"
                android:showAsAction="never"
                android:title="@string/menu_option_command_bar_show" />

            <item
                android:id="@+id/menu_option_wrap_text"
                android:checkable="true"
                android:showAsAction="never"
                android:title="@string/menu_option_wrap_text" />

            <item
                android:id="@+id/menu_option_shell_show"
                android:checkable="true"
                android:showAsAction="never"
                android:title="@string/menu_option_shell_show" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_help"
        android:alphabeticModifiers="FUNCTION"
        android:alphabeticShortcut="1"
        android:showAsAction="never"
        android:title="@string/menu_help" />
</menu>
